--- a/package.json
+++ b/package.json
@@ -9,8 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cloudinary": "^2.5.0",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.3",
+    "next": "14.2.13",
+    "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-icons": "^5.3.0",
+    "react-spinners": "^0.14.1",
+    "styled-components": "^6.1.13"
+  },
+  "devDependencies": {
+    "@types/node": "22.7.4",
+    "@types/react": "18.3.10",
+    "postcss": "^8",
+    "typescript": "5.6.2"
   }
 }
