Created Header, Banner, Calendar Icon and Map Icon

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "cloudinary": "^2.5.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
