--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "cloudinary": "^2.5.0",
+    "clsx": "^2.1.1",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
     "next": "14.2.13",
