--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.13.0",
     "react": "^18",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-spinners": "^0.14.1",
-    "styled-components": "^6.1.13"
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@types/node": "22.7.4",
