--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "congresso-srmg",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "classnames": "^2.5.1",
@@ -17,6 +19,7 @@
     "next": "14.2.13",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.13.0",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
