--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "classnames": "^2.5.1",
     "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
-    "mongodb": "^6.9.0",
-    "mongoose": "^8.6.3",
-    "next": "14.2.13",
+    "mongodb": "^6.13.1",
+    "mongoose": "^8.10.1",
+    "next": "^14.2.24",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.13.0",
     "react": "^18",
