--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/lib/*": ["./app/lib/*"],
+      "@/components/*": ["./app/components/*"],
+      "@/data/*": ["./app/data/*"],
+      "@/models/*": ["./models/*"],
     }
   }
 }
