--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node prisma/seed.js"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.4.1",
     "classnames": "^2.5.1",
     "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
-    "mongodb": "^6.13.1",
-    "mongoose": "^8.10.1",
     "next": "^14.2.24",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.13.0",
+    "pg": "^8.13.3",
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
@@ -25,9 +29,11 @@
     "react-spinners": "^0.14.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.5.0",
     "@types/node": "22.7.4",
     "@types/react": "18.3.10",
     "postcss": "^8",
+    "prisma": "^6.4.1",
     "typescript": "5.6.2"
   }
 }
