--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "dotenv -e .env.development -- next dev",
+    "prod": "dotenv -e .env.production -- next dev",
+    "start": "dotenv -e .env.production -- next start",
+    "build": "dotenv -e .env.production -- next build",
     "lint": "next lint",
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/seed.js",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build",
+    "migrate:test": "dotenv -e .env.development -- npx prisma migrate dev",
+    "migrate:main": "dotenv -e .env.production -- npx prisma migrate deploy",
+    "generate": "npx prisma generate"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -26,12 +31,14 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-select": "^5.10.0",
     "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.5.0",
     "@types/node": "22.7.4",
     "@types/react": "18.3.10",
+    "dotenv-cli": "^8.0.0",
     "postcss": "^8",
     "prisma": "^6.4.1",
     "typescript": "5.6.2"
