--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-select": "^5.10.0",
-    "react-spinners": "^0.14.1"
+    "react-spinners": "^0.14.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.5.0",
