Update vercel.json to redirect rote /live-srmg to https://srmg.rds.land/live-srmg

--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,11 @@
-{  "buildCommand": "npm run custom-build",  "ignoreCommand": "npm run prisma:generate",  "installCommand": "npm install"}
+{
+  "buildCommand": "npm run custom-build",
+  "ignoreCommand": "npm run prisma:generate",
+  "installCommand": "npm install",
+  "rewrites": [
+    {
+      "source": "/live-srmg/:path*",
+      "destination": "https://srmg.rds.land/live-srmg"
+    }
+  ]
+}
