--- a/package.json
+++ b/package.json
@@ -26,13 +26,18 @@
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
-    "@prisma/client": "^6.4.1",
+    "@bull-board/api": "^6.7.10",
+    "@bull-board/express": "^6.7.10",
+    "@prisma/client": "^6.5.0",
+    "bull": "^4.16.5",
     "classnames": "^2.5.1",
     "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
     "next": "^14.2.24",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.13.0",
+    "nodemailer": "^6.10.0",
+    "pagarme": "^4.35.2",
     "pg": "^8.13.3",
     "react": "^18",
     "react-device-detect": "^2.2.3",
@@ -40,6 +45,7 @@
     "react-icons": "^5.3.0",
     "react-select": "^5.10.0",
     "react-spinners": "^0.14.1",
+    "sharp": "^0.33.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -48,7 +54,7 @@
     "@types/react": "18.3.10",
     "dotenv-cli": "^8.0.0",
     "postcss": "^8",
-    "prisma": "^6.4.1",
+    "prisma": "^6.5.0",
     "typescript": "5.6.2"
   }
 }
