--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@bull-board/express": "^6.7.10",
     "@preact/signals-react": "^3.0.1",
     "@prisma/client": "^6.5.0",
+    "@vercel/postgres": "^0.10.0",
     "bull": "^4.16.5",
     "classnames": "^2.5.1",
     "cloudinary": "^2.5.0",
