--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "migrate:main": "DATABASE_URL=\"$POSTGRES_PRISMA_URL?branch=main\" prisma migrate deploy",
     "generate": "npx prisma generate",
     "custom-build": "prisma generate && next build",
-    "postinstall": "prisma generate"
+    "postinstall": "migrate:main && generate"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
