--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-  "buildCommand": "npm run vercel-build",
-  "outputDirectory": ".next",
+  "buildCommand": "npm run custom-build",
   "installCommand": "npm install",
   "rewrites": [
     {
