--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run custom-build",
+  "buildCommand": "npm run vercel-build",
   "installCommand": "npm install",
   "rewrites": [
     {
