Update Public Images and Logo

--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@bull-board/api": "^6.7.10",
     "@bull-board/express": "^6.7.10",
     "@preact/signals-react": "^3.0.1",
+    "@prisma/client": "^6.7.0",
     "@vercel/postgres": "^0.10.0",
     "bull": "^4.16.5",
     "classnames": "^2.5.1",
     "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
+    "dotenv-cli": "^8.0.0",
     "firebase": "^11.5.0",
     "next": "^14.2.24",
     "next-auth": "^4.24.7",
@@ -46,16 +48,14 @@
     "react-select": "^5.10.0",
     "react-spinners": "^0.14.1",
     "sharp": "^0.33.5",
-    "xlsx": "^0.18.5",
-    "@prisma/client": "^6.6.0",
-    "dotenv-cli": "^8.0.0",
-    "prisma": "^6.6.0"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.5.0",
     "@types/node": "22.7.4",
     "@types/react": "18.3.10",
     "postcss": "^8",
+    "prisma": "^6.7.0",
     "typescript": "5.6.2"
   }
 }
