--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@bull-board/api": "^6.7.10",
     "@bull-board/express": "^6.7.10",
     "@preact/signals-react": "^3.0.1",
-    "@prisma/client": "^6.9.0",
+    "@prisma/client": "^6.10.1",
     "@vercel/postgres": "^0.10.0",
+    "bcryptjs": "^3.0.2",
     "bull": "^4.16.5",
     "classnames": "^2.5.1",
     "cloudinary": "^2.5.0",
@@ -102,7 +104,7 @@
     "jest": "^30.0.2",
     "jest-environment-jsdom": "^30.0.2",
     "postcss": "^8",
-    "prisma": "^6.9.0",
+    "prisma": "^6.10.1",
     "supertest": "^7.1.1",
     "ts-node": "^10.9.2",
     "typescript": "5.6.2"
