--- a/package.json
+++ b/package.json
@@ -100,6 +100,8 @@
     "@types/react": "18.3.10",
     "babel-jest": "^30.0.0",
     "cypress": "^14.4.1",
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.3.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.2",
     "jest-environment-jsdom": "^30.0.2",
