--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,7 @@
 {
-  "extends": [
-    "next/core-web-vitals"
-  ],
+  "extends": ["next/core-web-vitals"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "warn",
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
-    "react/no-unescaped-entities": "warn",
-    "@next/next/no-img-element": "warn",
-    "import/no-anonymous-default-export": "warn",
-    "@typescript-eslint/no-require-imports": "warn"
+    "react-hooks/rules-of-hooks": "warn",
+    "react/no-unescaped-entities": "warn"
   }
 }
