Creating 4 Professional Certificates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "liveServer.settings.useLocalIp": true,
   "editor.tabSize": 2,
   "editor.detectIndentation": false,
-  "editor.insertSpaces": true
+  "editor.insertSpaces": true,
+  "github.copilot.chat.maxFileContextSize": 5
 }
